# mdkloader

./: CMakeLists.txt  README.md  mdkloader.cpp  mdkloader.h  mdkloader.rc  mdkloader_global.h
mdk/: MediaInfo.h  Player.h  VideoFrame.h  global.h
